<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/momentAuthor"
        android:id="@+id/momentAuthorTextView"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/momentContent"
        android:id="@+id/momentContentTextView"
        android:layout_below="@+id/momentAuthorTextView"
        android:layout_alignStart="@+id/momentAuthorTextView"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/momentTime"
        android:id="@+id/momentTimeTextView"
        android:layout_below="@+id/momentContentTextView"
        android:layout_alignStart="@+id/momentContentTextView"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/momentLikes"
        android:id="@+id/momentLikesTextView"
        android:layout_alignTop="@+id/momentTimeTextView"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/momentComments"
        android:id="@+id/momentCommentTextView"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="43dp"
        android:layout_alignTop="@+id/momentLikesTextView"
        android:layout_toStartOf="@+id/momentLikesTextView" />
</RelativeLayout>
